<resources>
    <string name="app_name">MyCookBook</string>
    <string name="accede">Accede</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registrado">¿Estas registrado?</string>
    <string name="registrate">Registrate</string>
    <string name="salir">Salir</string>
    <string name="crear_receta">Crear Receta</string>
    <string name="buscar">Buscar</string>
    <string name="ver_mis_recetas">Ver Mis recetas</string>
    <string name="nombre_de_la_receta">Nombre de la receta</string>
    <string name="nombre_de_categoria">Nombre de categoria</string>
    <string name="todas_las_recetas">Todas las recetas</string>
    <string name="nombre_subcategoria">Nombre subcategoria</string>
    <string name="cargar_foto">Cargar Foto</string>
    <string name="nombre_del_plato">Nombre del Plato</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="personas">Personas</string>
    <string name="tiempo_estimado">Tiempo estimado</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="ver_todas_las_recetas">Ver todas las recetas</string>
</resources>