<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarRecetaActivity">
    <ImageView
        android:id="@+id/ivFotoReceta"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/foto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/btCargarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cargar_foto"
        app:layout_constraintTop_toBottomOf="@+id/ivFotoReceta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etNombrePlato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_del_plato"
        app:layout_constraintTop_toBottomOf="@+id/btCargarFoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etIngredientes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingredientes"
        android:minLines="2"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/etNombrePlato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etCantidadPersonas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/personas"
        app:layout_constraintEnd_toStartOf="@+id/etTiempo"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIngredientes" />

    <EditText
        android:id="@+id/etTiempo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/tiempo_estimado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCantidadPersonas"
        app:layout_constraintTop_toBottomOf="@+id/etIngredientes" />

    <EditText
        android:id="@+id/etInstrucciones"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:hint="@string/instrucciones"
        android:minLines="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTiempo" />

    <Button
        android:id="@+id/btModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInstrucciones" />

</androidx.constraintlayout.widget.ConstraintLayout>