<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarRecetaActivity">

    <ImageView
        android:id="@+id/ivFotoReceta"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/foto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintHorizontal_bias="0.5" />


    <TextView
        android:id="@+id/tvNombrePlato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_del_plato"
        app:layout_constraintTop_toBottomOf="@+id/ivFotoReceta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvIngredientes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingredientes"
        android:minLines="2"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/tvNombrePlato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvCantidadPersonas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/personas"
        app:layout_constraintEnd_toStartOf="@+id/tvTiempo"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIngredientes" />

    <TextView
        android:id="@+id/tvTiempo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/tiempo_estimado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCantidadPersonas"
        app:layout_constraintTop_toBottomOf="@+id/tvIngredientes" />

    <TextView
        android:id="@+id/tvInstrucciones"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:hint="@string/instrucciones"
        android:minLines="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTiempo" />

    <Button
        android:id="@+id/btEliminar"
        android:layout_width="191dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:text="@string/eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstrucciones" />

    <Button
        android:id="@+id/btModificar"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="Modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toEndOf="@+id/btEliminar"
        app:layout_constraintTop_toBottomOf="@+id/tvInstrucciones" />

    <Button
        android:id="@+id/btMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Menú"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEliminar" />

</androidx.constraintlayout.widget.ConstraintLayout>
